# blue-pill-logic-analyser

./: .gdbinit  .gitignore  Cargo.toml  README.md
.cargo/: config
blue-pill-logic-analyser-driver/: Cargo.toml
blue-pill-logic-analyser-driver/examples/: pipe.rs
blue-pill-logic-analyser-driver/src/: lib.rs
blue-pill-logic-analyser-firmware/: .gdbinit  Cargo.toml
blue-pill-logic-analyser-firmware/src/: main.rs
src/: cdc.rs  main.rs
