[package]
authors = ["James Waples <jamwaffles@gmail.com>"]
name = "blue-pill-logic-analyser"
version = "0.1.0"
[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.5.3"
panic-semihosting = "0.3.0"
usb-device = { git = "https://github.com/mvirkkunen/usb-device", rev = "52b9e90bc160e12035718ee79ecaeb6eab6c5e08" }
# TODO: this fork is used temporarily to be able to set USB clocks correctly in the examples
stm32f103xx-hal = { git = "https://github.com/mvirkkunen/stm32f103xx-hal", rev = "71b5d90972abfcf66cd2fe4a9d4e28df2564abfb" }

[dependencies.stm32f103xx-usb]
git = "https://github.com/mvirkkunen/stm32f103xx-usb.git"
rev = "3b38517b8516f6bd84a2622132292b83d89d1da1"
